--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "https://unpkg.com/open-props/easings.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 :root {
     /* spotify colors*/
@@ -7,6 +8,8 @@
     --spotify-white: #ffffff;
     --spotify-grey: #b3b3b3;
     --spotify-darkGrey: #222222;
+
+    --global-root-font-size: 1rem;
 }
 
 /* reset */
@@ -27,11 +30,21 @@ svg {
 
 /* global page styles */
 
-html {}
+html {
+    font-family: 'Manrope', sans-serif;
+    line-height: 1.5;
+    font-size: var(--global-root-font-size);
+    background-color: var(--spotify-black);
+}
 
 /* center everything */
 
-body {}
+body {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 1fr auto 1fr;
+}
 
 /*
     Object: Button reset
@@ -66,10 +79,66 @@ body {}
     Toggle button
 */
 
+
 /*
     Album
 */
+.album{
+    max-width: 400px;
+    grid-column-start: 2;
+    grid-row-start: 2;
+    background-color: var(--spotify-darkGrey);
+    padding: 2rem;
+    border-radius: 10px;
+}
+.album__img{
+    border-radius: 10px;
+    margin-bottom: 1.5rem;
+}
+.album__header{
+    display: grid;
+    grid-template-columns: 1fr 1.5rem;
+    grid-template-rows: auto 1.5rem;
+    grid-template-areas:
+    "a b"
+    "c b"
+    ;
+}
+.album__title{
+    color: var(--spotify-white);
+    grid-area: a;
+}
+.album__artist{
+    color: var(--spotify-grey);
+    grid-area: c;
+}
+.album__action{
+    grid-area: b;
+    color: var(--spotify-white);
+    align-self: center;
+    display: grid;
+    
+}
+.icon{
+    opacity: 0;
+    transition: 1s var(--ease-out-5);
+    /* transition: opacity 0.3s ease; */
+    
+    
+}
+.icon--check{
+    color: var(--spotify-green);
+    grid-column-start: 1;
+    grid-row-start: 1;
+}
 
+.icon--add{
+    grid-column-start: 1;
+    grid-row-start: 1;
+}
+.added{
+    opacity: 1;
+}
 /*
     Utitlities
 */
