--- a/css/style.css
+++ b/css/style.css
@@ -121,10 +121,10 @@ body {
 }
 .icon{
     opacity: 0;
-    transition: 1s var(--ease-out-5);
-    /* transition: opacity 0.3s ease; */
-    
-    
+    transition: all 400ms cubic-bezier(.47,1.64,.41,.8);
+}
+.icon:active{
+    transform: rotate(60deg);
 }
 .icon--check{
     color: var(--spotify-green);
